// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> has a valid snapshot 1`] = `
<div
  className="login"
>
  <div
    className="login-screen"
  >
    <div
      className="app-title"
    >
      <h1>
        Login
      </h1>
    </div>
    <div
      className="login-form"
    >
      <form
        className="register-form"
        id="login_form"
        method="POST"
        name="login_form"
        onSubmit={[Function]}
      >
        <div
          className="control-group"
        >
          <input
            className="login-field"
            id="email"
            name="email"
            onChange={[Function]}
            placeholder="email"
            required={true}
            type="text"
            value=""
          />
          <label
            className="login-field-icon fui-user"
            htmlFor="login-name"
          />
        </div>
        <div
          className="control-group"
        >
          <input
            className="login-field"
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="password"
            required={true}
            type="password"
            value=""
          />
          <label
            className="login-field-icon fui-lock"
            htmlFor="login-pass"
          />
        </div>
        <button
          className="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </form>
      <a
        href="/register"
        onClick={[Function]}
      >
         Register new Account
      </a>
    </div>
  </div>
</div>
`;

exports[`<Login/> renders login form and submits data 1`] = `
<div
  className="login"
>
  <div
    className="login-screen"
  >
    <div
      className="app-title"
    >
      <h1>
        Login
      </h1>
    </div>
    <div
      className="login-form"
    >
      <form
        className="register-form"
        id="login_form"
        method="POST"
        name="login_form"
        onSubmit={[Function]}
      >
        <div
          className="control-group"
        >
          <input
            className="login-field"
            id="email"
            name="email"
            onChange={[Function]}
            placeholder="email"
            required={true}
            type="text"
            value="admin@gmail.com"
          />
          <label
            className="login-field-icon fui-user"
            htmlFor="login-name"
          />
        </div>
        <div
          className="control-group"
        >
          <input
            className="login-field"
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="password"
            required={true}
            type="password"
            value="baron1234"
          />
          <label
            className="login-field-icon fui-lock"
            htmlFor="login-pass"
          />
        </div>
        <button
          className="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </form>
      <Link
        replace={false}
        to="/register"
      >
         Register new Account
      </Link>
    </div>
  </div>
</div>
`;

exports[`<Login/> renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="login-screen"
      >
        <div
          className="app-title"
        >
          <h1>
            Login
          </h1>
        </div>
        <div
          className="login-form"
        >
          <form
            className="register-form"
            id="login_form"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="control-group"
            >
              <input
                className="login-field"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="email"
                required={true}
                type="text"
                value=""
              />
              <label
                className="login-field-icon fui-user"
                htmlFor="login-name"
              />
            </div>
            <div
              className="control-group"
            >
              <input
                className="login-field"
                id="password"
                name="password"
                onChange={[Function]}
                placeholder="password"
                required={true}
                type="password"
                value=""
              />
              <label
                className="login-field-icon fui-lock"
                htmlFor="login-pass"
              />
            </div>
            <button
              className="btn btn-primary"
              type="submit"
            >
              Submit
            </button>
          </form>
          <Link
            replace={false}
            to="/register"
          >
             Register new Account
          </Link>
        </div>
      </div>,
      "className": "login",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="app-title"
          >
            <h1>
              Login
            </h1>
          </div>,
          <div
            className="login-form"
          >
            <form
              className="register-form"
              id="login_form"
              method="POST"
              name="login_form"
              onSubmit={[Function]}
            >
              <div
                className="control-group"
              >
                <input
                  className="login-field"
                  id="email"
                  name="email"
                  onChange={[Function]}
                  placeholder="email"
                  required={true}
                  type="text"
                  value=""
                />
                <label
                  className="login-field-icon fui-user"
                  htmlFor="login-name"
                />
              </div>
              <div
                className="control-group"
              >
                <input
                  className="login-field"
                  id="password"
                  name="password"
                  onChange={[Function]}
                  placeholder="password"
                  required={true}
                  type="password"
                  value=""
                />
                <label
                  className="login-field-icon fui-lock"
                  htmlFor="login-pass"
                />
              </div>
              <button
                className="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </form>
            <Link
              replace={false}
              to="/register"
            >
               Register new Account
            </Link>
          </div>,
        ],
        "className": "login-screen",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1>
              Login
            </h1>,
            "className": "app-title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Login",
            },
            "ref": null,
            "rendered": "Login",
            "type": "h1",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <form
                className="register-form"
                id="login_form"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="control-group"
                >
                  <input
                    className="login-field"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    placeholder="email"
                    required={true}
                    type="text"
                    value=""
                  />
                  <label
                    className="login-field-icon fui-user"
                    htmlFor="login-name"
                  />
                </div>
                <div
                  className="control-group"
                >
                  <input
                    className="login-field"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    placeholder="password"
                    required={true}
                    type="password"
                    value=""
                  />
                  <label
                    className="login-field-icon fui-lock"
                    htmlFor="login-pass"
                  />
                </div>
                <button
                  className="btn btn-primary"
                  type="submit"
                >
                  Submit
                </button>
              </form>,
              <Link
                replace={false}
                to="/register"
              >
                 Register new Account
              </Link>,
            ],
            "className": "login-form",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="control-group"
                  >
                    <input
                      className="login-field"
                      id="email"
                      name="email"
                      onChange={[Function]}
                      placeholder="email"
                      required={true}
                      type="text"
                      value=""
                    />
                    <label
                      className="login-field-icon fui-user"
                      htmlFor="login-name"
                    />
                  </div>,
                  <div
                    className="control-group"
                  >
                    <input
                      className="login-field"
                      id="password"
                      name="password"
                      onChange={[Function]}
                      placeholder="password"
                      required={true}
                      type="password"
                      value=""
                    />
                    <label
                      className="login-field-icon fui-lock"
                      htmlFor="login-pass"
                    />
                  </div>,
                  <button
                    className="btn btn-primary"
                    type="submit"
                  >
                    Submit
                  </button>,
                ],
                "className": "register-form",
                "id": "login_form",
                "method": "POST",
                "name": "login_form",
                "onSubmit": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        className="login-field"
                        id="email"
                        name="email"
                        onChange={[Function]}
                        placeholder="email"
                        required={true}
                        type="text"
                        value=""
                      />,
                      <label
                        className="login-field-icon fui-user"
                        htmlFor="login-name"
                      />,
                    ],
                    "className": "control-group",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "login-field",
                        "id": "email",
                        "name": "email",
                        "onChange": [Function],
                        "placeholder": "email",
                        "required": true,
                        "type": "text",
                        "value": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "login-field-icon fui-user",
                        "htmlFor": "login-name",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "label",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        className="login-field"
                        id="password"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        required={true}
                        type="password"
                        value=""
                      />,
                      <label
                        className="login-field-icon fui-lock"
                        htmlFor="login-pass"
                      />,
                    ],
                    "className": "control-group",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "login-field",
                        "id": "password",
                        "name": "password",
                        "onChange": [Function],
                        "placeholder": "password",
                        "required": true,
                        "type": "password",
                        "value": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "login-field-icon fui-lock",
                        "htmlFor": "login-pass",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "label",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit",
                    "className": "btn btn-primary",
                    "type": "submit",
                  },
                  "ref": null,
                  "rendered": "Submit",
                  "type": "button",
                },
              ],
              "type": "form",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " Register new Account",
                "replace": false,
                "to": "/register",
              },
              "ref": null,
              "rendered": " Register new Account",
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="login-screen"
        >
          <div
            className="app-title"
          >
            <h1>
              Login
            </h1>
          </div>
          <div
            className="login-form"
          >
            <form
              className="register-form"
              id="login_form"
              method="POST"
              name="login_form"
              onSubmit={[Function]}
            >
              <div
                className="control-group"
              >
                <input
                  className="login-field"
                  id="email"
                  name="email"
                  onChange={[Function]}
                  placeholder="email"
                  required={true}
                  type="text"
                  value=""
                />
                <label
                  className="login-field-icon fui-user"
                  htmlFor="login-name"
                />
              </div>
              <div
                className="control-group"
              >
                <input
                  className="login-field"
                  id="password"
                  name="password"
                  onChange={[Function]}
                  placeholder="password"
                  required={true}
                  type="password"
                  value=""
                />
                <label
                  className="login-field-icon fui-lock"
                  htmlFor="login-pass"
                />
              </div>
              <button
                className="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </form>
            <Link
              replace={false}
              to="/register"
            >
               Register new Account
            </Link>
          </div>
        </div>,
        "className": "login",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="app-title"
            >
              <h1>
                Login
              </h1>
            </div>,
            <div
              className="login-form"
            >
              <form
                className="register-form"
                id="login_form"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="control-group"
                >
                  <input
                    className="login-field"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    placeholder="email"
                    required={true}
                    type="text"
                    value=""
                  />
                  <label
                    className="login-field-icon fui-user"
                    htmlFor="login-name"
                  />
                </div>
                <div
                  className="control-group"
                >
                  <input
                    className="login-field"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    placeholder="password"
                    required={true}
                    type="password"
                    value=""
                  />
                  <label
                    className="login-field-icon fui-lock"
                    htmlFor="login-pass"
                  />
                </div>
                <button
                  className="btn btn-primary"
                  type="submit"
                >
                  Submit
                </button>
              </form>
              <Link
                replace={false}
                to="/register"
              >
                 Register new Account
              </Link>
            </div>,
          ],
          "className": "login-screen",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1>
                Login
              </h1>,
              "className": "app-title",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Login",
              },
              "ref": null,
              "rendered": "Login",
              "type": "h1",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <form
                  className="register-form"
                  id="login_form"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="control-group"
                  >
                    <input
                      className="login-field"
                      id="email"
                      name="email"
                      onChange={[Function]}
                      placeholder="email"
                      required={true}
                      type="text"
                      value=""
                    />
                    <label
                      className="login-field-icon fui-user"
                      htmlFor="login-name"
                    />
                  </div>
                  <div
                    className="control-group"
                  >
                    <input
                      className="login-field"
                      id="password"
                      name="password"
                      onChange={[Function]}
                      placeholder="password"
                      required={true}
                      type="password"
                      value=""
                    />
                    <label
                      className="login-field-icon fui-lock"
                      htmlFor="login-pass"
                    />
                  </div>
                  <button
                    className="btn btn-primary"
                    type="submit"
                  >
                    Submit
                  </button>
                </form>,
                <Link
                  replace={false}
                  to="/register"
                >
                   Register new Account
                </Link>,
              ],
              "className": "login-form",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="control-group"
                    >
                      <input
                        className="login-field"
                        id="email"
                        name="email"
                        onChange={[Function]}
                        placeholder="email"
                        required={true}
                        type="text"
                        value=""
                      />
                      <label
                        className="login-field-icon fui-user"
                        htmlFor="login-name"
                      />
                    </div>,
                    <div
                      className="control-group"
                    >
                      <input
                        className="login-field"
                        id="password"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        required={true}
                        type="password"
                        value=""
                      />
                      <label
                        className="login-field-icon fui-lock"
                        htmlFor="login-pass"
                      />
                    </div>,
                    <button
                      className="btn btn-primary"
                      type="submit"
                    >
                      Submit
                    </button>,
                  ],
                  "className": "register-form",
                  "id": "login_form",
                  "method": "POST",
                  "name": "login_form",
                  "onSubmit": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          className="login-field"
                          id="email"
                          name="email"
                          onChange={[Function]}
                          placeholder="email"
                          required={true}
                          type="text"
                          value=""
                        />,
                        <label
                          className="login-field-icon fui-user"
                          htmlFor="login-name"
                        />,
                      ],
                      "className": "control-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "login-field",
                          "id": "email",
                          "name": "email",
                          "onChange": [Function],
                          "placeholder": "email",
                          "required": true,
                          "type": "text",
                          "value": "",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "login-field-icon fui-user",
                          "htmlFor": "login-name",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "label",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          className="login-field"
                          id="password"
                          name="password"
                          onChange={[Function]}
                          placeholder="password"
                          required={true}
                          type="password"
                          value=""
                        />,
                        <label
                          className="login-field-icon fui-lock"
                          htmlFor="login-pass"
                        />,
                      ],
                      "className": "control-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "login-field",
                          "id": "password",
                          "name": "password",
                          "onChange": [Function],
                          "placeholder": "password",
                          "required": true,
                          "type": "password",
                          "value": "",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "login-field-icon fui-lock",
                          "htmlFor": "login-pass",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "label",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Submit",
                      "className": "btn btn-primary",
                      "type": "submit",
                    },
                    "ref": null,
                    "rendered": "Submit",
                    "type": "button",
                  },
                ],
                "type": "form",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": " Register new Account",
                  "replace": false,
                  "to": "/register",
                },
                "ref": null,
                "rendered": " Register new Account",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
